--- a/virtual_output/empow_classifier_output.conf
+++ b/virtual_output/empow_classifier_output.conf
@@ -29,8 +29,8 @@ filter{
       product_name_field => "[observer][product]"
       bulk_request_interval => 1
       bulk_request_size => 50
-      username =>  "ramic@empow.co"
-      password => "Empow2018!"
+      username =>  "username"
+      password => "password"
     }
 
 
