--- a/parsers/carbonblack/cbdefense.conf
+++ b/parsers/carbonblack/cbdefense.conf
@@ -57,11 +57,9 @@ filter {
 
 
   mutate {
-    replace => {"[destination][hostname]" => "%{dvchost},%{sntdom}"}
-    replace => {"[destination][user][name]" => "%{duser},%{sntdom}"}
     rename => ["dvc", "[destination][ip]"]
     rename => ["cs%{cs_id}", "[event][id]"]
-    rename => ["cs%{cs_info}", "[event][more][info]"]
+    rename => ["cs%{cs_info}", "[event][more_info]"]
     rename => ["act", "[event][type]"]
   }
 
@@ -155,6 +153,6 @@ filter {
 
 output {  
   pipeline{
-    send_to => [empow_classifier_output]
+    send_to => [elastic_output]
   }
 }
