--- a/virtual_input/single_port.conf
+++ b/virtual_input/single_port.conf
@@ -32,6 +32,7 @@ filter{
       "subtype=ips"			        => "fortinet"
       "Active_Threat"				=> "cbdefense"
       "Security risk found|Virus found"		=> "symantec"
+      "ASA"	     		 		=> "cisco_asa"
     }
     fallback => "default"
   }
@@ -59,6 +60,11 @@ output {
   else if [log_dispatcher]=="symantec" {
     pipeline{
       send_to => [symantec_pipeline]
+    }
+  }
+  else if [log_dispatcher]=="cisco_asa" {
+    pipeline{
+      send_to => [asa_pipeline]
     }
   }
   else{
